--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload PDF</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         table {
             width: 100%;
@@ -20,9 +21,53 @@
         th {
             background-color: #f2f2f2;
         }
+
+        /* Style for gear icon */
+        #settingsIcon {
+            font-size: 24px;
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+        }
+
+        /* Modal styles */
+        #settingsModal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        #settingsModalContent {
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            width: 90%;
+            max-width: 300px;  /* Limit max width for proper centering */
+            margin: 0 auto;    /* Center align horizontally */
+        }
     </style>
 </head>
 <body>
+    <div id="settingsIcon"><i class="fas fa-cog"></i></div>
+
+    <!-- Settings Modal -->
+    <div id="settingsModal">
+        <div id="settingsModalContent">
+            <h3>Server Settings</h3>
+            <label for="serverAddress">Server Address:</label>
+            <input type="text" id="serverAddress">
+            <button id="saveSettingsButton">Save</button>
+            <button id="closeModalButton">Close</button>
+        </div>
+    </div>
+
     <h1>Upload PDF File</h1>
     <form id="uploadForm">
         <input type="file" id="fileInput" name="file">
@@ -48,7 +93,32 @@
     </div>
 
     <script>
-        // Function to handle paper uploads
+        document.getElementById('settingsIcon').addEventListener('click', function() {
+            document.getElementById('settingsModal').style.display = 'flex';
+            document.getElementById('serverAddress').value = localStorage.getItem('serverAddress') || 'http://localhost:5000';
+        });
+
+        document.getElementById('closeModalButton').addEventListener('click', function() {
+            document.getElementById('settingsModal').style.display = 'none';
+        });
+
+        document.getElementById('saveSettingsButton').addEventListener('click', function() {
+            const serverAddress = document.getElementById('serverAddress').value;
+            localStorage.setItem('serverAddress', serverAddress);
+            document.getElementById('settingsModal').style.display = 'none';
+            loadPapers();  // Reload papers after updating server address
+        });
+
+        document.getElementById('settingsModal').addEventListener('click', function(event) {
+            if (event.target === this) {
+                this.style.display = 'none';
+            }
+        });
+        
+        function getServerAddress() {
+            return localStorage.getItem('serverAddress') || 'http://localhost:5000';
+        }
+
         document.getElementById('uploadForm').addEventListener('submit', function(event) {
             event.preventDefault();
 
@@ -63,8 +133,7 @@
             const formData = new FormData();
             formData.append('file', file);
 
-            // Upload the paper
-            fetch('http://localhost:5000/papers', {
+            fetch(`${getServerAddress()}/papers`, {
                 method: 'POST',
                 body: formData
             })
@@ -87,7 +156,7 @@
         // Example of rendering the paper list with status
         // Load papers from the backend
         function loadPapers() {
-            fetch('http://localhost:5000/papers')
+            fetch(`${getServerAddress()}/papers`)
                 .then(response => response.json())
                 .then(data => {
                     const papersTableBody = document.querySelector('#papersTable tbody');
@@ -117,7 +186,7 @@
                             viewButton.textContent = 'View';
                             viewButton.addEventListener('click', function() {
                             // Redirect to the audio sync page
-                            fetch(`http://localhost:5000/papers/${paper.id}/audio`)
+                            fetch(`${getServerAddress()}/papers/${paper.id}/audio`)
                                 .then(response => response.json())
                                 .then(audioData => {
                                     if (audioData.error) {
@@ -137,13 +206,13 @@
                             downloadButton.textContent = 'Download';
                             downloadButton.addEventListener('click', function() {
                                 // Fetch the narrational text file and trigger the download
-                                fetch(`http://localhost:5000/papers/${paper.id}/narrational_text`)
+                                fetch(`${getServerAddress()}/papers/${paper.id}/narrational_text`)
                                     .then(response => response.json())
                                     .then(data => {
                                         if (data.status === 'success') {
                                             // Create a temporary anchor element to trigger the download
                                             const link = document.createElement('a');
-                                            link.href = `http://localhost:5000${data.data.narrational_text_file}`;
+                                            link.href = `${getServerAddress()}${data.data.narrational_text_file}`;
                                             link.download = '';  // Let the browser decide the filename
                                             document.body.appendChild(link);
                                             link.click();  // Trigger the download
@@ -193,7 +262,7 @@
         }
         // Function to delete a paper by ID
         function deletePaper(paperId) {
-            fetch(`http://localhost:5000/papers/${paperId}`, {
+            fetch(`${getServerAddress()}/papers/${paperId}`, {
                 method: 'DELETE'
             })
             .then(response => response.json())
